# python-project-52

./: Makefile  README.md  build.sh  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: action.yaml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  pipeline.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_delete_tasks.py  0003_alter_task_executor.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
task_manager/templates/user/: create.html  delete.html  index.html  update.html
task_manager/user/: forms.py  tests.py  urls.py  views.py
